--- a/cmd/bb_scheduler/BUILD.bazel
+++ b/cmd/bb_scheduler/BUILD.bazel
@@ -1,4 +1,5 @@
 load("@com_github_buildbarn_bb_storage//tools:container.bzl", "container_push_official")
+load("//:CUSTOM_PUSH.bzl", "container_push_qinusty")
 load("@io_bazel_rules_docker//container:container.bzl", "container_image")
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 
@@ -33,7 +34,7 @@ container_image(
     visibility = ["//visibility:public"],
 )
 
-container_push_official(
+container_push_qinusty(
     name = "bb_scheduler_container_push",
     component = "bb-scheduler",
     image = ":bb_scheduler_container",
